translator/static/translator/css/create.css
body {
    padding-top: 50px;
}

.starter-template {
    padding: 20px 15px;
}

#button{
vertical-align:middle;
}

.step-div{
margin-bottom:20px;
}

.step-number, .step-delete{
    font-size:25px;
    //text-align:center;
    margin:0px;
}

.step-name input{
font-size:20px;
padding:1px 3px;
}

.step-description{
    margin-top:5px;
}

.program-step{
background:white;
margin-bottom:30px;
padding:10px;
border-radius:5px;
border: 1px #CCC solid;
margin-top:40px;
min-height:60px;
}

.program-box{
    font-size:32px;
    min-width:32px;
    margin:5px;
    padding:5px;
    border-radius:5px;
    border: 1px solid grey;
}

.arrow-box{
    font-size:32px;
    min-width:32px;
    margin:5px;
    padding:5px;
}

.glyphicon-time{
background:azure;
}

.glyphicon-comment{
background:#FFFF99;
}

.glyphicon-button-input{
background:#E0C2E0;
font-family:sans-serif;
}

.glyphicon-step{
background:#7094B8;
color:white;
font-family:sans-serif;
}

.glyphicon-move{
background:#CCFFCC;
}

.substep-buttons, .component-buttons{
display:inline-block;
vertical-align:bottom;
visibility:hidden;
}

.component-buttons{
visibility:visible;
vertical-align:top;
}

.btn-edit-substep, .btn-remove-substep{
padding:1px;
margin-bottom:5px;
height:20px;
width:20px;
display:block;
}

.btn-remove-component{
padding:0 1px;
margin:10px 0 15px -10px;
height:15px;
width:15px;
display:block;
font-size:x-small;
border:1px grey solid;
vertical-align:middle;
}

.substep-div:hover .substep-buttons {
    visibility:visible;
}

.component{
display:inline-block;
}

